--- a/veracode.yml
+++ b/veracode.yml
@@ -65,7 +65,7 @@ veracode_sca_scan:
   # pull request event. Specifying both will only execute push event.
   # Leaving them both false means this will never run
   push:
-    trigger: true
+    trigger: false
     branches_to_run:
       - "*"
     branches_to_exclude:
@@ -92,7 +92,7 @@ veracode_iac_secrets_scan:
   # pull request event. Specifying both will only execute push event.
   # Leaving them both false means this will never run
   push:
-    trigger: true
+    trigger: false
     branches_to_run:
       - "*"
     branches_to_exclude:
