--- a/veracode.yml
+++ b/veracode.yml
@@ -3,7 +3,7 @@ veracode_sast_pipeline_scan:
   # pull request event. Specifying both will only execute push event.
   # Leaving them both false means this will never run
   push:
-    trigger: true
+    trigger: false
     branches_to_run:
       - "*"
     branches_to_exclude:
@@ -34,7 +34,7 @@ veracode_sast_policy_scan:
   # pull request event. Specifying both will only execute push event.
   # Leaving them both false means this will never run
   push:
-    trigger: false
+    trigger: true
     branches_to_run:
       - default_branch
     branches_to_exclude:
@@ -52,7 +52,7 @@ veracode_sast_policy_scan:
   #If the break_build_policy_findings is set to true, the build will break if the pipeline scan finds any policy violations.      
   break_build_policy_findings: true
   #If the break_build_on_error is set to true, the build will break if the scan failed to complete in time or with an error.
-  break_build_on_error: false
+  break_build_on_error: true
   #If the break_build_on_policy_error is set to true, this is the error message that will be displayed if the pipeline scan fails to complete in time or with an error.
   error_message: "Veracode SAST scan faced a problem. Please contact your Veracode administrator for more information. If you are a Veracode administrator, please contact Veracode support."
   policy: 'Veracode Recommended Medium + SCA'
